# journal-library

./: README.md
consoleapp/: CMakeLists.txt  consoleapp.cpp
include/: myJournal.hpp
socket_consoleapp/: CMakeLists.txt  socket_consoleapp.cpp
src/: CMakeLists.txt  myJournal.cpp
tests/: CMakeLists.txt  tests_journal.cpp
